[package]
name = "cobalt-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "CLI toolchain for the COBALT UI framework"

[[bin]]
name = "cobalt"
path = "src/main.rs"

[dependencies]
cobalt-ir = { path = "../cobalt-ir" }
cobalt-parser = { path = "../cobalt-parser" }
cobalt-term = { path = "../cobalt-term" }
clap = { version = "4", features = ["derive"] }
serde_json = "1"
anyhow = "1"
