[package]
name = "cobalt-term"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Terminal renderer for the COBALT UI framework"

[dependencies]
cobalt-ir = { path = "../cobalt-ir" }
cobalt-render = { path = "../cobalt-render" }
crossterm = "0.28"
ratatui = "0.29"
